fix: bold and callout

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,7 +7,7 @@ Apps need to think, speak, solve and adopt.
 Old (current) tools can’t build this.
 That’s why we built Unbody.
 
-### **What is Unbody?**
+### What is Unbody?
 
 **Unbody is the Supabase of the AI era.** Built from the ground up on **vector databases**, it's a **unified development stack** tailored for modern AI-native and AI-enhanced applications. Whether you're creating **AI-native products** (No AI model, no product) or **AI-enhanced features** (Adding AI features to traditional products), Unbody removes the complexity of fragmented pipelines by offering:
 
@@ -26,7 +26,7 @@ Unbody is a **commercial open-source framework**, but for now, the **cloud versi
 
 We built Unbody because, to be honest, we were fed up with the lack of AI-driven products in daily life. We found the roots of this in traditional development stacks like **MERN** or **MEAN**, because they are designed for static data and CRUD operations, while the new world of apps demands software to be speakable, with personalization and action-taking capabilities. We need a stack that works based on knowledge and not static data, and is proactive rather than passive. (read more here)
 
-## **How Unbody Works**
+## How Unbody Works
 
 At its core, Unbody transforms raw, unstructured & structured data into AI-ready knowledge and then enables you to develop products & features that are powered by this knowledge.
 
@@ -102,7 +102,7 @@ This flexibility allows you to focus on building features, not wrestling with di
     Unbody is a **commercial open-source framework**, but for now, the **cloud version** is the primary way to use it. Everything—from data ingestion to deployment—is hosted on our platform. The open-source release is on the way!
 </Callout>
 
-### **What Can You Build with Unbody?**
+### What Can You Build with Unbody?
 
 1. **AI-Native Products**
 
