--- a/pages/first-project.mdx
+++ b/pages/first-project.mdx
@@ -1,10 +1,10 @@
 import { Callout, Cards, Steps, Tabs } from "nextra/components";
 
-# **Getting Started: Create Your First Project**
+# Getting Started: Create Your First Project
 
 In this guide, we’ll walk you through building your first project with Unbody, step by step.
 
-<Callout type="info" emoji="⚠️">
+<Callout type="info" emoji="ℹ️">
   All the following steps for creating and configuring a project can be done
   using either the **Dashboard** or the **SDK**. If this is your first time, we
   recommend using the **Dashboard** for a more visual and user-friendly
@@ -13,7 +13,7 @@ In this guide, we’ll walk you through building your first project with Unbody,
 
 ---
 
-## **Prerequisites**
+## Prerequisites
 
 1. **Unbody Account**:
 
@@ -29,7 +29,7 @@ In this guide, we’ll walk you through building your first project with Unbody,
 
 Once ready, let’s get started.
 
-## **Overview**
+## Overview
 
 A **project** in Unbody is your workspace. It includes:
 
@@ -39,7 +39,7 @@ A **project** in Unbody is your workspace. It includes:
 
 When you set up a project, you’re defining the tools and processes that transform raw data into actionable knowledge. Once the data is ingested, Unbody processes, vectorizes, and enriches it. Afterward, you can query and interact with the AI-ready data through the **Content API**.
 
-## **Step 1: Create a Project**
+## Step 1: Create a Project
 
 <Tabs items={['Dashboard', 'SDK']}>
   <Tabs.Tab>
@@ -76,7 +76,7 @@ When you set up a project, you’re defining the tools and processes that transf
   </Tabs.Tab>
 </Tabs>
 
-## **Step 2: Configure your project**
+## Step 2: Configure your project
 
 Once your project is created, configure the AI tools it will use. Configurations include:
 
@@ -122,7 +122,7 @@ project.save();
 </Tabs>
 
 
-## **Step 3: Add a Data Source**
+## Step 3: Add a Data Source
 
 Data sources define where your project gets its data. Unbody supports both prebuilt integrations (e.g., Google Drive, Discord) and custom data providers.
 
@@ -163,7 +163,7 @@ At this point, unbody will ingest, process, vectorize, and enrich the data autom
 
 At this point you have nothing to do on dashboard and can moe to next step which is about start bulding. The following will be providerd in SDK (typescript) and Graphql. Each project has a graphql playground where you cna play around with the given queries.
 
-## **Step 4: Interact with Your Data**
+## Step 4: Interact with Your Data
 
 Once your data is ready, use the **Content API** to perform tasks like semantic search or content generation.
 
@@ -394,7 +394,7 @@ const {
   </Tabs.Tab>
 </Tabs>
 
-## **Next Steps**
+## Next Steps
 
 Congratulations! Your first project is now set up. You can:
 
