--- a/pages/first-project.mdx
+++ b/pages/first-project.mdx
@@ -53,13 +53,14 @@ When you set up a project, you’re defining the tools and processes that transf
   </Tabs.Tab>
     
  <Tabs.Tab>
-  1. Install the SDK:
+  <Steps>
+   ### Install the SDK:
     
     ```bash
     npm install unbody
     ```
     
-  2. Create a project programmatically:
+   ### Create a project programmatically:
     
     ```tsx
     import { UnbodyAdmin } from '@unbody/admin';
@@ -73,6 +74,7 @@ When you set up a project, you’re defining the tools and processes that transf
     });
     project.save();
     ```
+    </Steps>
   </Tabs.Tab>
 </Tabs>
 
