fix: intro links

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,7 +11,7 @@ That’s why we built Unbody.
 
 **Unbody is the Supabase of the AI era.** Built from the ground up on **vector databases**, it's a **unified development stack** tailored for modern AI-native and AI-enhanced applications. Whether you're creating **AI-native products** (No AI model, no product) or **AI-enhanced features** (Adding AI features to traditional products), Unbody removes the complexity of fragmented pipelines by offering:
 
-- **Backend Layer**: A unified, plugin-based system for data [ingestion](https://unbody.io), [vectorization](https://unbody.io), [enhancement](https://unbody.io), intelligence APIs, and seamless [storage and streaming](https://unbody.io).
+- **Backend Layer**: A unified, plugin-based system for data [ingestion](/data-ingestion/overview), [vectorization](/project-configurations/vectorizers), [enhancement](/project-configurations/enhancers), intelligence APIs, and seamless storage and streaming.
 - **Frontend Layer**: LLM-ready UI components and utilities.
 - **Agentic Layer**: Tools for autonomous decision-making and advanced function calling.
 - **Utility Layer**: Features like query parsing and semantic ranking to accelerate development.
