--- a/pages/first-project.mdx
+++ b/pages/first-project.mdx
@@ -6,7 +6,7 @@ In this guide, we’ll walk you through building your first project with Unbody,
 
 <Callout type="info" emoji="ℹ️">
   All the following steps for creating and configuring a project can be done
-  using either the **Dashboard** or the **SDK**. If this is your first time, we
+  using either the [**Dashboard**](https://app.unbody.io/projects) or the [**SDK**](/admin-api). If this is your first time, we
   recommend using the **Dashboard** for a more visual and user-friendly
   experience.
 </Callout>
@@ -34,7 +34,7 @@ Once ready, let’s get started.
 A **project** in Unbody is your workspace. It includes:
 
 - A dedicated database to store and manage AI-ready data.
-- Configurable AI tools like **vectorizers**, **enhancers**, and **generative modules**.
+- Configurable AI tools like [**vectorizers**](/project-configurations/vectorizers), [**enhancers**](/project-configurations/enhancers), and [**generative modules**](/project-configurations/generative-modules).
 - One or more **data sources**, defining where your data comes from.
 
 When you set up a project, you’re defining the tools and processes that transform raw data into actionable knowledge. Once the data is ingested, Unbody processes, vectorizes, and enriches it. Afterward, you can query and interact with the AI-ready data through the **Content API**.
@@ -126,7 +126,7 @@ project.save();
 
 ## Step 3: Add a Data Source
 
-Data sources define where your project gets its data. Unbody supports both prebuilt integrations (e.g., Google Drive, Discord) and custom data providers.
+Data sources define where your project gets its data. Unbody supports both prebuilt integrations (e.g., [Google Drive](/providers/google-drive), [Discord](/providers/discord)) and custom data providers.
 
 <Tabs items={['Dashboard', 'SDK']}>
   <Tabs.Tab>
