--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,13 +1,14 @@
 import { Callout, Cards, Steps } from 'nextra/components'
 
-# Intro
-
 Users don’t want data. They want answers.
+
 Apps need to think, speak, solve and adopt.
+
 Old (current) tools can’t build this.
+
 That’s why we built Unbody.
 
-### What is Unbody?
+## What is Unbody?
 
 **Unbody is the Supabase of the AI era.** Built from the ground up on **vector databases**, it's a **unified development stack** tailored for modern AI-native and AI-enhanced applications. Whether you're creating **AI-native products** (No AI model, no product) or **AI-enhanced features** (Adding AI features to traditional products), Unbody removes the complexity of fragmented pipelines by offering:
 
@@ -16,11 +17,9 @@ That’s why we built Unbody.
 - **Agentic Layer**: Tools for autonomous decision-making and advanced function calling.
 - **Utility Layer**: Features like query parsing and semantic ranking to accelerate development.
 
-<aside>
-
+<Callout>
 Unbody is a **commercial open-source framework**, but for now, the **cloud version** is the primary way to use it. Everything—from data ingestion to deployment—is hosted on our platform. We will release the alpha open-source version in February 2025.
-
-</aside>
+</Callout>
 
 ## Why Unbody?
 
@@ -91,18 +90,7 @@ Here's how it works, step by step:
     </Cards>
 </Steps>
 
-Unbody is built with **headless architecture**. This means:
-
-- You can centralize your backend while staying agnostic to your frontend framework.
-- Use a single backend to power multiple frontends—whether built with **Next.js**, **Nuxt.js**, or even custom setups with **Node.js** or **Express.js**.
-
-This flexibility allows you to focus on building features, not wrestling with disparate stacks. Learn more about [Unbody’s architecture](/core-architecture-overview).
-
-<Callout type="info" emoji="ℹ️">
-    Unbody is a **commercial open-source framework**, but for now, the **cloud version** is the primary way to use it. Everything—from data ingestion to deployment—is hosted on our platform. The open-source release is on the way!
-</Callout>
-
-### What Can You Build with Unbody?
+## What Can You Build with Unbody?
 
 1. **AI-Native Products**
 
