--- a/pages/data-ingestion/overview.mdx
+++ b/pages/data-ingestion/overview.mdx
@@ -1,4 +1,4 @@
-# Overview
+# Data Ingestion Overview
 
 Every AI-native application starts with data. But data is scattered—stored across platforms, in different formats, and often unstructured. Collecting and preparing this data is the first step in building anything AI-ready.
 
